_sass/layout/_masthead.scss
/* ==========================================================================
   MASTHEAD
   ========================================================================== */

.masthead {
    position: fixed;
    background: var(--global-bg-color);
    height: fit-content;
    top: 0;
    width: 100%;
    /* Full width of the screen */
    left: 0;
    right: 0;

    -webkit-animation: intro 0.3s both;
    animation: intro 0.3s both;
    -webkit-animation-delay: 0.15s;
    animation-delay: 0.15s;
    z-index: 20;

    &::after {
        content: "";
        position: absolute;
        bottom: 0;
        height: 1px;
        background: var(--global-border-color);
        width: 100%;
    }

    &__inner-wrap {
        @include clearfix;
        padding: 0.5em 0em 0.5em 0.25em;
        font-family: $sans-serif-narrow;
        width: 95%;
        /* Mobile width (95%) */
        margin: 0 auto;
        /* Center the inner content */

        @include breakpoint($medium) {
            /* Desktop mods (90%) */
            width: 90%;
            padding: 0.5em 1em;
        }

        nav {
            z-index: 10;
            width: 100%;
            /* Use full width of inner-wrap */
        }

        a {
            text-decoration: none;
        }
    }
}

.masthead__menu {

    ul {
        margin: 0;
        padding: 0;
        clear: both;
        list-style-type: none;
    }
}

.masthead__menu-item {
    background-color: var(--global-bg-color);
    display: block;
    list-style-type: none;
    white-space: nowrap;

    &--lg {
        padding-right: 2em;
        font-weight: 700;
    }
}



// Site log styling ============================================================

.site-logo {
    max-height: 30px; // Default sizing for larger screens
    width: auto;
    vertical-align: middle;
    display: inline-block;
    transform: translateY(-10px);

    // For screens smaller than medium
    @include breakpoint(max-width $medium) {
        max-height: 20px;
        transform: translateY(0px);
    }
}

.site-logo--light {
    display: inline-block;
}

.site-logo--dark {
    display: none;
}

// When dark theme is active: Hide light logo, show dark logo
html[data-theme="dark"] .site-logo--light {
    display: none;
}

html[data-theme="dark"] .site-logo--dark {
    display: inline-block;
}

// End of site logo styling ====================================================

